--- a/SOYIN/templates/SOYIN/base.html
+++ b/SOYIN/templates/SOYIN/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+<!-- This is the Sandstone theme on bootswatch -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
 <html>
@@ -27,7 +28,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
-        <li><a href="#">Expression DB <span class="sr-only">(current)</span></a></li>
+        <li><a href="/index2">Expression DB <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Standing Variation DB</a></li>
         <li><a href="#">Mutant DB</a></li>
       </ul>
