--- a/SOYIN/templates/SOYIN/index.html
+++ b/SOYIN/templates/SOYIN/index.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+<!-- This is the Sandstone theme on bootswatch -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
 <html>
@@ -48,26 +49,37 @@
         </div>
 
         <div>
-            <h2><a href="">News</a></h2>
-            <p>This site is still under contruction</p>
-            <div class="progress progress-striped active">
-            <div class="progress-bar" style="width: 25%">
-            </div>
-            </div>
-        </div>
-        <div>
         <ul class="list-group">
           <li class="list-group-item">
             <span class="badge">1</span>
             Working on expression database
+          <br>
+          <br>
+            <div class="progress progress-striped active">
+            <div class="progress-bar progress-bar-success" style="width: 55%">
+            </div>
+            </div>
           </li>
+
           <li class="list-group-item">
             <span class="badge">2</span>
-            Working of stading variant database
+            Working on stading variant database
+          <br>
+          <br>
+            <div class="progress progress-striped active">
+            <div class="progress-bar progress-bar-warning" style="width: 10%">
+            </div>
+            </div>
           </li>
           <li class="list-group-item">
             <span class="badge">3</span>
             Working on Mutant Database
+          <br>
+          <br>
+            <div class="progress progress-striped active">
+            <div class="progress-bar" style="width: 25%">
+            </div>
+            </div>
           </li>
         </ul>
     </div>
